manifests/s3proxy/fancy/s3proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3proxy
  namespace: aaw-fc
  labels:
    app: s3proxy
spec:
  selector:
    app: s3proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: s3proxy-web
  namespace: aaw-fc
  labels:
    app: s3proxy-web
spec:
  selector:
    app: s3proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
