manifests/s3proxy/fancy/s3proxy-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: s3-virtualservice
  namespace: aaw-fc
spec:
  exportTo:
    - aaw-fc
    - istio-system
    - ingress-general-system
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'  # TODO: change this to the relevant hosts
  http:
  - match:
    - uri:
        prefix: /s3/aaw-fc/index.html
    name: s3-route-static-files
    rewrite:
      uri: /s3/index.html
    route:
    - destination:
        host: s3proxy-web.aaw-fc.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /s3/aaw-fc/explorer.js
    name: s3-route-static-files
    rewrite:
      uri: /s3/explorer.js
    route:
    - destination:
        host: s3proxy-web.aaw-fc.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /s3/aaw-fc/sw_modify_header.js
    name: s3-route-static-files
    rewrite:
      uri: /s3/sw_modify_header.js
    route:
    - destination:
        host: s3proxy-web.aaw-fc.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /s3/aaw-fc/explorer.css
    name: s3-route-static-files
    rewrite:
      uri: /s3/explorer.css
    route:
    - destination:
        host: s3proxy-web.aaw-fc.svc.cluster.local
        port:
          number: 80
  # [Standard] Rewrite URL + redirect to s3proxy webapp service
  - match:
    - uri:
        prefix: /s3/aaw-fc/standard
    name: s3-route-s3proxy-web-requests
    rewrite:
      uri: /standard
    route:
    - destination:
        host: s3proxy.aaw-fc.svc.cluster.local
        port:
          number: 80
  # [Premium] Rewrite URL + redirect to s3proxy webapp service
  - match:
    - uri:
        prefix: /s3/aaw-fc/premium
    name: s3-route-s3proxy-web-requests
    rewrite:
      uri: /premium
    route:
    - destination:
        host: s3proxy.aaw-fc.svc.cluster.local
        port:
          number: 80
  # Rewrite URL + redirect to s3proxy service
  - match:
    - uri:
        prefix: /s3/aaw-fc/
    name: s3-route-s3proxy-requests
    rewrite:
      uri: /s3/
    route:
    - destination:
        host: s3proxy-web.aaw-fc.svc.cluster.local
        port:
          number: 80
  - match:
    - headers:
        referer:
          exact: https://kubeflow.aaw-dev.cloud.statcan.ca/_/s3/?ns=aaw-fc
    - headers:
        referer:
          exact: https://kubeflow.aaw.cloud.statcan.ca/_/s3/?ns=aaw-fc
    name: s3-redirect
    redirect:
      uri: /s3/aaw-fc/index.html
  # [Standard] If the referrer was the s3proxy webpage, rewrite the URL to contain the /s3/ prefix and route directly to the appropriate service
  - match:
    - uri:
        prefix: /standard
    name: s3-redirect-standard-s3proxy
    # headers:
    #   request:
    #     remove:
    #       - "authorization"
    redirect:
      uri: /s3/aaw-fc/standard
  # [Premium] If the referrer was the s3proxy webpage, rewrite the URL to contain the /s3/ prefix and route directly to the appropriate service
  - match:
    - uri:
        prefix: /premium
    name: s3-redirect-premium-s3proxy
    redirect:
      uri: /s3/aaw-fc/premium
