manifests/s3proxy/fancy/s3proxy-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: s3proxy-allow-ingress
  namespace: aaw-fc
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace.statcan.gc.ca/purpose: system
    - namespaceSelector:
        matchLabels:
          namespace.statcan.gc.ca/purpose: daaas
    ports:
    - port: http
      protocol: TCP
  podSelector:
    matchLabels:
      app: s3proxy
  policyTypes:
  - Ingress
